Migrate to latest nx Add backend-api skeleton

--- a/nx.json
+++ b/nx.json
@@ -26,22 +26,35 @@
       }
     ]
   },
-  "projects": {
-    "frontend-public": {
-      "tags": []
+  "cli": {
+    "defaultCollection": "@nrwl/angular"
+  },
+  "generators": {
+    "@nrwl/angular": {
+      "application": {
+        "linter": "eslint"
+      },
+      "library": {
+        "linter": "eslint"
+      },
+      "storybook-configuration": {
+        "linter": "eslint"
+      }
     },
-    "frontend-public-e2e": {
-      "tags": [],
-      "implicitDependencies": ["frontend-public"]
+    "@nrwl/angular:application": {
+      "style": "scss",
+      "linter": "eslint",
+      "unitTestRunner": "jest",
+      "e2eTestRunner": "cypress"
     },
-    "frontend-tools": {
-      "tags": []
+    "@nrwl/angular:library": {
+      "style": "scss",
+      "linter": "eslint",
+      "unitTestRunner": "jest"
     },
-    "models": {
-      "tags": []
-    },
-    "vendors": {
-      "tags": []
+    "@nrwl/angular:component": {
+      "style": "scss"
     }
-  }
+  },
+  "defaultProject": "frontend-public"
 }
