--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,58 @@
 {
   "version": 1,
   "projects": {
+    "backend-api": {
+      "root": "apps/backend-api",
+      "sourceRoot": "apps/backend-api/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/backend-api",
+            "main": "apps/backend-api/src/main.ts",
+            "tsConfig": "apps/backend-api/tsconfig.app.json",
+            "assets": ["apps/backend-api/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/backend-api/src/environments/environment.ts",
+                  "with": "apps/backend-api/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "backend-api:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/backend-api/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/backend-api"],
+          "options": {
+            "jestConfig": "apps/backend-api/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
     "frontend-public": {
       "projectType": "application",
       "root": "apps/frontend-public",
@@ -31,7 +83,7 @@
               "apps/frontend-public/src/styles.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [ "libs/frontend-tools/src/lib/styles" ]
+              "includePaths": ["libs/frontend-tools/src/lib/styles"]
             },
             "scripts": []
           },
@@ -87,7 +139,8 @@
               "apps/frontend-public/src/**/*.ts",
               "apps/frontend-public/src/**/*.html"
             ]
-          }
+          },
+          "outputs": ["{options.outputFile}"]
         },
         "test": {
           "builder": "@nrwl/jest:jest",
@@ -97,7 +150,8 @@
             "passWithNoTests": true
           }
         }
-      }
+      },
+      "tags": []
     },
     "frontend-public-e2e": {
       "root": "apps/frontend-public-e2e",
@@ -121,9 +175,12 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/frontend-public-e2e/**/*.{js,ts}"]
-          }
+          },
+          "outputs": ["{options.outputFile}"]
         }
-      }
+      },
+      "tags": [],
+      "implicitDependencies": ["frontend-public"]
     },
     "frontend-tools": {
       "projectType": "library",
@@ -146,9 +203,11 @@
               "libs/frontend-tools/src/**/*.ts",
               "libs/frontend-tools/src/**/*.html"
             ]
-          }
+          },
+          "outputs": ["{options.outputFile}"]
         }
-      }
+      },
+      "tags": []
     },
     "models": {
       "root": "libs/models",
@@ -159,7 +218,8 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/models/**/*.ts"]
-          }
+          },
+          "outputs": ["{options.outputFile}"]
         },
         "test": {
           "builder": "@nrwl/jest:jest",
@@ -169,7 +229,8 @@
             "passWithNoTests": true
           }
         }
-      }
+      },
+      "tags": []
     },
     "vendors": {
       "projectType": "library",
@@ -192,40 +253,11 @@
               "libs/vendors/src/**/*.ts",
               "libs/vendors/src/**/*.html"
             ]
-          }
+          },
+          "outputs": ["{options.outputFile}"]
         }
-      }
-    }
-  },
-  "cli": {
-    "defaultCollection": "@nrwl/angular"
-  },
-  "schematics": {
-    "@nrwl/angular": {
-      "application": {
-        "linter": "eslint"
       },
-      "library": {
-        "linter": "eslint"
-      },
-      "storybook-configuration": {
-        "linter": "eslint"
-      }
-    },
-    "@nrwl/angular:application": {
-      "style": "scss",
-      "linter": "eslint",
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
-    },
-    "@nrwl/angular:library": {
-      "style": "scss",
-      "linter": "eslint",
-      "unitTestRunner": "jest"
-    },
-    "@nrwl/angular:component": {
-      "style": "scss"
+      "tags": []
     }
-  },
-  "defaultProject": "frontend-public"
+  }
 }
