--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
-    "start": "ng serve",
+    "start": "yarn start",
+    "start:frontend-public": "nx serve frontend-public",
+    "start:backend-api": "nx serve backend-api",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -29,59 +31,81 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.0",
-    "@angular/cdk": "^12.1.4",
-    "@angular/common": "^12.1.0",
-    "@angular/compiler": "^12.1.0",
-    "@angular/core": "^12.1.0",
-    "@angular/forms": "^12.1.0",
-    "@angular/material": "^12.1.4",
+    "@angular/animations": "12.2.13",
+    "@angular/cdk": "12.2.12",
+    "@angular/common": "12.2.13",
+    "@angular/compiler": "12.2.13",
+    "@angular/core": "12.2.13",
+    "@angular/forms": "12.2.13",
+    "@angular/material": "12.2.12",
     "@angular/material-moment-adapter": "^12.2.0",
-    "@angular/platform-browser": "^12.1.0",
-    "@angular/platform-browser-dynamic": "^12.1.0",
-    "@angular/router": "^12.1.0",
+    "@angular/platform-browser": "12.2.13",
+    "@angular/platform-browser-dynamic": "12.2.13",
+    "@angular/router": "12.2.13",
     "@nestjs/common": "^8.1.2",
+    "@nestjs/config": "^1.1.0",
+    "@nestjs/core": "^8.1.2",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
-    "@nrwl/angular": "12.6.4",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.1.2",
+    "@nrwl/angular": "13.1.3",
     "bcrypt": "^5.0.1",
+    "hammerjs": "^2.0.8",
+    "joi": "^17.4.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "ngx-webstorage": "^8.0.0",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.0",
+    "@angular-devkit/build-angular": "12.2.13",
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
     "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "^12.0.0",
-    "@angular/compiler-cli": "^12.1.0",
-    "@angular/language-service": "^12.1.0",
-    "@nrwl/cli": "12.6.4",
-    "@nrwl/cypress": "12.6.4",
-    "@nrwl/eslint-plugin-nx": "12.6.4",
-    "@nrwl/jest": "12.6.4",
-    "@nrwl/linter": "12.6.4",
-    "@nrwl/tao": "12.6.4",
-    "@nrwl/workspace": "12.6.4",
+    "@angular/cli": "12.2.13",
+    "@angular/compiler-cli": "12.2.13",
+    "@angular/language-service": "12.2.13",
+    "@nestjs/schematics": "^8.0.4",
+    "@nestjs/testing": "^8.1.2",
+    "@nrwl/cli": "13.1.3",
+    "@nrwl/cypress": "13.1.3",
+    "@nrwl/eslint-plugin-nx": "13.1.3",
+    "@nrwl/jest": "13.1.3",
+    "@nrwl/linter": "13.1.3",
+    "@nrwl/nest": "13.1.3",
+    "@nrwl/node": "13.1.3",
+    "@nrwl/tao": "13.1.3",
+    "@nrwl/workspace": "13.1.3",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "26.0.24",
+    "@types/jest": "27.0.2",
+    "@types/joi": "^17.2.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "cypress": "^7.3.0",
-    "dotenv": "~10.0.0",
-    "eslint": "7.22.0",
+    "dotenv": "10.0.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.4",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
     "prettier": "^2.3.1",
-    "ts-jest": "27.0.3",
+    "signale": "^1.4.0",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.3.5"
+    "typescript": "4.3.5"
   }
 }
+
