Full auth rest api

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,33 @@ COMPOSE_FILE=docker-compose.yml:docker-compose.macosx-override.yml
 
 # Frontend
 ENV_JS=./apps/frontend-public/src/env.js
+
+# Apache conf
+APACHE_HOSTNAME=bob.fr
+HOST_HTTPS_PORT=44300
+APACHE_LOG=.docker/apache_vol/log
+SSL_VOLUME=.docker/apache_vol/ssl
+
+# Node conf
+NODE_ENV=development
+NODE_PORT=3333
+ALLOWED_CORS='http://localhost:4200,https://localhost:44300'
+# OR
+# ALLOWED_CORS='https://family-calendar.nicolasmura.com'
+
+# MongoDB conf & connection options
+MONGODB_CONF=./config/mongodb/mongod.conf # not used yet
+MONGODB_DB_DIR_FOR_MAC_ONLY=.docker/mongodb_vol/db # Mac OS X only (because named volume does not work)
+MONGODB_LOGS_DIR=.docker/mongodb_vol/log
+MONGODB_PORT=12345
+# MONGODB_URI = `localhost` (if backend-api is NOT running in the Docker container) OR `database` (if backend-api is running INSIDE the Docker container)
+MONGODB_URI=mongodb://<MONGO_INITDB_DBUSER_USERNAME>:<MONGO_INITDB_DBUSER_PASSWORD>@localhost:12345/
+MONGO_INITDB_DATABASE=admin
+MONGO_INITDB_ROOT_USERNAME=<MONGO_INITDB_ROOT_USERNAME>
+MONGO_INITDB_ROOT_PASSWORD=<MONGO_INITDB_ROOT_PASSWORD>
+MONGODB_DB_MAIN=<MONGODB_DB_MAIN>
+MONGO_INITDB_DBUSER_USERNAME=<MONGO_INITDB_DBUSER_USERNAME>
+MONGO_INITDB_DBUSER_PASSWORD=<MONGO_INITDB_DBUSER_PASSWORD>
+MONGO_INITDB_APPUSER_EMAIL=<MONGO_INITDB_APPUSER_EMAIL>
+MONGO_INITDB_APPUSER_MOBILE=<MONGO_INITDB_APPUSER_MOBILE>
+MONGO_INITDB_APPUSER_HASHED_PASSWORD='<MONGO_INITDB_APPUSER_HASHED_PASSWORD>'
