--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -108,4 +108,3 @@
     "typescript": "4.3.5"
   }
 }
-
