--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ MONGO_INITDB_ROOT_PASSWORD=<MONGO_INITDB_ROOT_PASSWORD>
 MONGODB_DB_MAIN=<MONGODB_DB_MAIN>
 MONGO_INITDB_DBUSER_USERNAME=<MONGO_INITDB_DBUSER_USERNAME>
 MONGO_INITDB_DBUSER_PASSWORD=<MONGO_INITDB_DBUSER_PASSWORD>
+MONGO_INITDB_APPUSER_USERNAME=<MONGO_INITDB_APPUSER_USERNAME>
 MONGO_INITDB_APPUSER_EMAIL=<MONGO_INITDB_APPUSER_EMAIL>
 MONGO_INITDB_APPUSER_MOBILE=<MONGO_INITDB_APPUSER_MOBILE>
 MONGO_INITDB_APPUSER_HASHED_PASSWORD='<MONGO_INITDB_APPUSER_HASHED_PASSWORD>'
