--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "yarn start",
-    "start:frontend-public": "nx serve frontend-public",
+    "start:frontend-public": "nx serve frontend-public  --host 192.168.1.47 --disable-host-check",
     "start:backend-api": "nx serve backend-api",
     "build": "ng build",
     "test": "ng test",
@@ -51,6 +51,7 @@
     "@nestjs/platform-express": "^8.1.2",
     "@nrwl/angular": "13.1.3",
     "bcrypt": "^5.0.1",
+    "browser-fs-access": "^0.21.1",
     "hammerjs": "^2.0.8",
     "joi": "^17.4.2",
     "jwt-decode": "^3.1.2",
