--- a/.docker/Dockerfile.frontend-public
+++ b/.docker/Dockerfile.frontend-public
@@ -2,14 +2,13 @@
 FROM httpd:2.4.38
 
 # Copy custom configuration (Enable SSL + load extra/httpd-vhosts.conf)
-COPY config/my-httpd.conf               /usr/local/apache2/conf/httpd.conf
-COPY config/family-calendar-docker.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
-# COPY ./config/family-calendar.nikouz.fr-docker.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
-COPY ssl/fullchain.pem                  /usr/local/apache2/conf/server.crt
-COPY ssl/privkey.pem                    /usr/local/apache2/conf/server.key
+COPY config/my-httpd.conf      /usr/local/apache2/conf/httpd.conf
+COPY config/photos-docker.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
+COPY ssl/fullchain.pem         /usr/local/apache2/conf/server.crt
+COPY ssl/privkey.pem           /usr/local/apache2/conf/server.key
 
 # Change directory so that our commands run inside this directory
-WORKDIR /usr/local/apache2/htdocs/family-calendar/frontend-public
+WORKDIR /usr/local/apache2/htdocs/zuokin-photos/frontend-public
 
 # Add some debug utilities
 RUN apt-get update && apt-get install nano
