--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "yarn start",
-    "start:frontend-public": "nx serve frontend-public",
+    "start:frontend-public": "nx serve frontend-public --hmr",
     "start:backend-api": "nx serve backend-api",
     "build": "ng build",
     "test": "ng test",
@@ -60,6 +60,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.4",
     "ngx-webstorage": "^8.0.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -78,6 +79,7 @@
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
     "@angular/language-service": "12.2.13",
+    "@angularclass/hmr": "^3.0.0",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.2",
     "@nrwl/cli": "13.1.3",
@@ -93,6 +95,7 @@
     "@types/jest": "27.0.2",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "14.14.33",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
