--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - ${NODE_PORT}:${NODE_PORT}
     volumes:
       - .env:/usr/zuokin-photos/backend-api/dist/apps/backend-api/.env
+      - .docker/${UPLOAD_FOLDER_TMP}:/usr/zuokin-photos/backend-api/${UPLOAD_FOLDER_TMP}
     depends_on:
       database:
         condition: service_healthy
