--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ NODE_PORT=3333
 ALLOWED_CORS='http://localhost:4200,https://localhost:44300'
 # OR
 # ALLOWED_CORS='https://family-calendar.nicolasmura.com'
-UPLOAD_FOLDER_TMP='./files'
+UPLOAD_FOLDER_TMP='./upload'
 
 # MongoDB conf & connection options
 MONGODB_CONF=./config/mongodb/mongod.conf # not used yet
