--- a/config/my-httpd.conf
+++ b/config/my-httpd.conf
@@ -226,7 +226,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin contact@nicolasmura.com
+ServerAdmin contact@nicolasmura.fr
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
