--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@nrwl/angular": "13.1.3",
     "bcrypt": "^5.0.1",
     "browser-fs-access": "^0.21.1",
+    "exifreader": "^4.5.0",
+    "fs": "^0.0.1-security",
     "hammerjs": "^2.0.8",
     "joi": "^17.4.2",
     "jwt-decode": "^3.1.2",
