Fix some bugs Serve uploaded files from media subfolder Add tmp delete all medias feature for debug facilities Fancy styling and init bottom tabs

--- a/config/photos-docker.conf
+++ b/config/photos-docker.conf
@@ -50,6 +50,8 @@
     ProxyStatus On
     ProxyPass           /api    http://database:${NODE_PORT}/api interpolate
     ProxyPassReverse    /api    http://database:${NODE_PORT}/api interpolate
+    ProxyPass           /medias    http://database:${NODE_PORT}/medias interpolate
+    ProxyPassReverse    /medias    http://database:${NODE_PORT}/medias interpolate
 
     # proxy wss:// to ws:// (needs proxy_wstunnel)
     RewriteEngine on
