--- a/angular.json
+++ b/angular.json
@@ -8,12 +8,16 @@
       "architect": {
         "build": {
           "builder": "@nrwl/node:build",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/backend-api",
             "main": "apps/backend-api/src/main.ts",
             "tsConfig": "apps/backend-api/tsconfig.app.json",
-            "assets": ["apps/backend-api/src/assets"]
+            "assets": [
+              "apps/backend-api/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -37,14 +41,20 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/backend-api/**/*.ts"]
+            "lintFilePatterns": [
+              "apps/backend-api/**/*.ts"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/backend-api"],
+          "outputs": [
+            "coverage/apps/backend-api"
+          ],
           "options": {
             "jestConfig": "apps/backend-api/jest.config.js",
             "passWithNoTests": true
@@ -61,7 +71,9 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/frontend-public",
             "index": "apps/frontend-public/src/index.html",
@@ -76,16 +88,21 @@
                 "glob": "**/*",
                 "input": "./libs/frontend-tools/src/lib/assets/",
                 "output": "./assets"
-              }
+              },
+              "apps/frontend-public/src/manifest.webmanifest"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "apps/frontend-public/src/styles.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": ["libs/frontend-tools/src/lib/styles"]
+              "includePaths": [
+                "libs/frontend-tools/src/lib/styles"
+              ]
             },
-            "scripts": []
+            "scripts": [],
+            "serviceWorker": true,
+            "ngswConfigPath": "apps/frontend-public/ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -140,11 +157,15 @@
               "apps/frontend-public/src/**/*.html"
             ]
           },
-          "outputs": ["{options.outputFile}"]
+          "outputs": [
+            "{options.outputFile}"
+          ]
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/frontend-public"],
+          "outputs": [
+            "coverage/apps/frontend-public"
+          ],
           "options": {
             "jestConfig": "apps/frontend-public/jest.config.js",
             "passWithNoTests": true
@@ -174,13 +195,19 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/frontend-public-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/frontend-public-e2e/**/*.{js,ts}"
+            ]
           },
-          "outputs": ["{options.outputFile}"]
+          "outputs": [
+            "{options.outputFile}"
+          ]
         }
       },
       "tags": [],
-      "implicitDependencies": ["frontend-public"]
+      "implicitDependencies": [
+        "frontend-public"
+      ]
     },
     "frontend-tools": {
       "projectType": "library",
@@ -190,7 +217,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/frontend-tools"],
+          "outputs": [
+            "coverage/libs/frontend-tools"
+          ],
           "options": {
             "jestConfig": "libs/frontend-tools/jest.config.js",
             "passWithNoTests": true
@@ -204,7 +233,9 @@
               "libs/frontend-tools/src/**/*.html"
             ]
           },
-          "outputs": ["{options.outputFile}"]
+          "outputs": [
+            "{options.outputFile}"
+          ]
         }
       },
       "tags": []
@@ -217,13 +248,19 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["libs/models/**/*.ts"]
+            "lintFilePatterns": [
+              "libs/models/**/*.ts"
+            ]
           },
-          "outputs": ["{options.outputFile}"]
+          "outputs": [
+            "{options.outputFile}"
+          ]
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/models"],
+          "outputs": [
+            "coverage/libs/models"
+          ],
           "options": {
             "jestConfig": "libs/models/jest.config.js",
             "passWithNoTests": true
@@ -240,7 +277,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/vendors"],
+          "outputs": [
+            "coverage/libs/vendors"
+          ],
           "options": {
             "jestConfig": "libs/vendors/jest.config.js",
             "passWithNoTests": true
@@ -254,7 +293,9 @@
               "libs/vendors/src/**/*.html"
             ]
           },
-          "outputs": ["{options.outputFile}"]
+          "outputs": [
+            "{options.outputFile}"
+          ]
         }
       },
       "tags": []
