--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start:frontend-public": "nx serve frontend-public --hmr",
     "start:backend-api": "nx serve backend-api",
     "build": "ng build",
+    "generate-build-infos": "node node_modules/typescript/bin/tsc scripts/generate-build-infos.ts && node scripts/generate-build-infos.js --no-version --no-message --jenkinsBuildNumber $BUILD_ID",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
+    "cypress:open": "cypress open --project ./apps/frontend-public-e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -44,7 +46,9 @@
     "@angular/material-moment-adapter": "^12.2.0",
     "@angular/platform-browser": "12.2.13",
     "@angular/platform-browser-dynamic": "12.2.13",
+    "@angular/pwa": "^13.3.3",
     "@angular/router": "12.2.13",
+    "@angular/service-worker": "^13.3.4",
     "@nestjs/common": "^8.1.2",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.1.2",
@@ -52,6 +56,8 @@
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.2",
+    "@nestjs/platform-ws": "^8.4.4",
+    "@nestjs/websockets": "^8.4.4",
     "@nrwl/angular": "13.1.3",
     "bcrypt": "^5.0.1",
     "browser-fs-access": "^0.21.1",
@@ -101,6 +107,7 @@
     "@types/node": "14.14.33",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "cypress": "^7.3.0",
