Fix Service Workers & update doc

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ SSL_VOLUME=.docker/apache_vol/ssl
 # Node conf
 NODE_ENV=development
 NODE_PORT=3333
-ALLOWED_CORS='http://localhost:4200,https://localhost:44300'
+ALLOWED_CORS='http://localhost:4200,https://localhost:44300,http://localhost:8080'
 # OR
 # ALLOWED_CORS='https://family-calendar.nicolasmura.com'
 UPLOAD_FOLDER_TMP='./upload'
