--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "yarn start",
     "start:frontend-public": "nx serve frontend-public --hmr",
     "start:backend-api": "nx serve backend-api",
+    "serve:dist": "node node_modules/typescript/bin/tsc apps/frontend-public/src/env-for-prod-service-workers.ts --outfile apps/frontend-public/src/env.js && nx build frontend-public --prod && git checkout apps/frontend-public/src/env.js && http-server -p 8080 -c-1 dist/apps/frontend-public",
+    "kill-http-server": "sudo kill -9 $(lsof -ti:8080)",
     "build": "ng build",
     "generate-build-infos": "node node_modules/typescript/bin/tsc scripts/generate-build-infos.ts && node scripts/generate-build-infos.js --no-version --no-message --jenkinsBuildNumber $BUILD_ID",
     "test": "ng test",
@@ -46,9 +48,8 @@
     "@angular/material-moment-adapter": "^12.2.0",
     "@angular/platform-browser": "12.2.13",
     "@angular/platform-browser-dynamic": "12.2.13",
-    "@angular/pwa": "^13.3.3",
     "@angular/router": "12.2.13",
-    "@angular/service-worker": "^13.3.4",
+    "@angular/service-worker": "~12.2.0",
     "@nestjs/common": "^8.1.2",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.1.2",
